src/tests/testfiles/binary-operators/types-12.txt
Error at 2:9: Comparison operator operands need to be of same type (have float and char[])
1.0 < "a";
    ^
